[tool.poetry]
name = "user-db"
version = "0.1.0"
description = ""
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
readme = "README.md"
packages = [{include = "user_db"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
